--- a/src/components/editors/views/nestedView.scss
+++ b/src/components/editors/views/nestedView.scss
@@ -439,6 +439,9 @@ input[type='number']::-webkit-outer-spin-button {
 
 .view-editor-root{
   --inner-page-padding: 1rem;
+  display: flex;
+  flex-flow: column;
+
   .btn-back{
     font-size: 0.9em;
     margin: auto;
@@ -447,8 +450,7 @@ input[type='number']::-webkit-outer-spin-button {
     }
   }
   .dock-layout{
-    width: 100%;
-    height: 100%;
+    flex-grow: 1;
     .dock-nav-wrap{
       margin-left: 0.25rem;
     }
